--- a/Northstar.CustomServers/mod/cfg/autoexec_ns_server.cfg
+++ b/Northstar.CustomServers/mod/cfg/autoexec_ns_server.cfg
@@ -13,6 +13,7 @@ everything_unlocked 1 // 全解锁
 
 // gameserver settings
 ns_should_return_to_lobby 1 // 游戏结束后是否返回到大厅
+ns_send_clients_back_to_lobby_after_match 0 // 游戏结束后是否将非主机玩家送回本地大厅
 
 net_chan_limit_mode 2 // 踢出客户端netchan处理延迟过高的玩家
 net_chan_limit_msec_per_sec 100 // 客户端netchan处理延迟阈值
